--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 
 # Created by https://www.toptal.com/developers/gitignore/api/django
 # Edit at https://www.toptal.com/developers/gitignore?templates=django
+virtual
 
 ### Django ###
+
 *.log
 *.pot
 *.pyc
