--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ packaging==20.3
 pep517==0.8.2
 Pillow==8.2.0
 progress==1.5
+psycopg2==2.8.6
 pycodestyle==2.7.0
 pycparser==2.20
 PyJWT==2.0.1
@@ -54,3 +55,4 @@ toml==0.10.2
 uritemplate==3.0.1
 urllib3==1.25.8
 webencodings==0.5.1
+whitenoise==5.2.0
