--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ cryptography==3.4.7
 defusedxml==0.7.1
 distlib==0.3.0
 distro==1.4.0
+dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.4
 Django==3.2
 django-cors-headers==3.7.0
